--- a/gb/18/11/28/n10879954.md
+++ b/gb/18/11/28/n10879954.md
@@ -1,15 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>林辉：共产党国家的“作秀公审”</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2018/11/1111.jpg" />
-<h6>1981年“四人帮”在中共最高法院成立的特别法庭上。（网络图片）
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2018年11月29日讯】公开庭审，在法治国家是最为正常不过的事情。然而，在并无真正法治的共产党国家，对于共产党认定的“敌人”或“反党者”的公开审判却明显有著作秀的味道，是以这类审判常被称为<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E2%80%9C%E4%BD%9C%E7%A7%80%E5%85%AC%E5%AE%A1%E2%80%9D.md#1">“作秀公审”</a>，亦被称为“摆样子公审”。</p>
+	<p>【大纪元2018年11月29日讯】公开庭审，在法治国家是最为正常不过的事情。然而，在并无真正法治的共产党国家，对于共产党认定的“敌人”或“反党者”的公开审判却明显有著作秀的味道，是以这类审判常被称为<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E2%80%9C%E4%BD%9C%E7%A7%80%E5%85%AC%E5%AE%A1%E2%80%9D.md#1">“作秀公审”</a>，亦被称为“摆样子公审”。</p>
 <p>维基百科称，在此种类型的审判中，有明显迹象可以表明司法当局已经提前定了被告人的罪。此种审判唯一的目的就是展示对被告人的指控并向当众宣读判决以对公众做出警告。摆样子公审比起维护<ahref="https://zh.wikipedia.org/wiki/%E6%AD%A3%E7%BE%A9">正义</a>更倾向于具有报复性。据悉，该词出现于20世纪30年代的苏联统治时期。</p>
 <h2><strong>苏联的作秀公审之“工业党案”</strong></h2>
-<p><strong>?</strong>苏联最早出现的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E2%80%9C%E4%BD%9C%E7%A7%80%E5%85%AC%E5%AE%A1%E2%80%9D.md#1">“作秀公审”</a>是在1930年11月25日至12月7日。被告是一群苏联著名的经济学家和工程师，<ahref="https://zh.wikipedia.org/w/index.php?title=%E5%88%97%E6%98%82%E5%B0%BC%E5%BE%B7%C2%B7%E5%BA%B7%E6%96%AF%E5%9D%A6%E4%B8%81%E8%AF%BA%E7%BB%B4%E5%A5%87%C2%B7%E6%8B%89%E5%A7%86%E6%B4%A5&amp;action=edit&amp;redlink=1">列昂尼德·康斯坦丁诺维奇·拉姆津</a>等8人，被指控成立“工业党”，并受“法国帝国主义”的指使，与英国等勾结，混入苏联国家机关，破坏社会主义经济建设。在审判过程中，被告承认，如果上台，他们打算成立一个反革命政府。</p>
+<p><strong>?</strong>苏联最早出现的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E2%80%9C%E4%BD%9C%E7%A7%80%E5%85%AC%E5%AE%A1%E2%80%9D.md#1">“作秀公审”</a>是在1930年11月25日至12月7日。被告是一群苏联著名的经济学家和工程师，<ahref="https://zh.wikipedia.org/w/index.php?title=%E5%88%97%E6%98%82%E5%B0%BC%E5%BE%B7%C2%B7%E5%BA%B7%E6%96%AF%E5%9D%A6%E4%B8%81%E8%AF%BA%E7%BB%B4%E5%A5%87%C2%B7%E6%8B%89%E5%A7%86%E6%B4%A5&amp;action=edit&amp;redlink=1">列昂尼德·康斯坦丁诺维奇·拉姆津</a>等8人，被指控成立“工业党”，并受“法国帝国主义”的指使，与英国等勾结，混入苏联国家机关，破坏社会主义经济建设。在审判过程中，被告承认，如果上台，他们打算成立一个反革命政府。</p>
 <p>审判结束后，其中5名被告都被判处死刑，后改判为长期徒刑，其他被告则分别被判处不同刑期的徒刑。据信，他们不过是苏联计划经济失败的替罪羊。显然，苏共深知内中的冤情。是以，首名被告拉姆津在狱中被允许继续研究，在1932年获释，并在1943年获奖，以证明苏维埃国家具有拉拢其最不可调和敌人的能力。其他一些被告也陆续被赦免。</p>
 <h2><strong>苏联大清洗时期的三次“作秀公审”</strong></h2>
 <p>苏联最臭名昭著的“作秀公审”是大清洗时期的三次莫斯科审判。“大清洗”是苏联三十年代开展的一场针对隐藏在内部“人民的敌人”的运动，始于1934年的基洛夫被害案件，直到1939年二战爆发才算告一段落。</p>
@@ -27,7 +26,7 @@
 <p>最终，布哈林等18人被判处死刑，3人被分别判处25年、20年、15年监禁。布哈林在死前曾经要求服毒而死，但却在被迫观看了其他16人被枪决后，被枪决。三名未被判处死刑的人均在囚禁过程中，死于非命。</p>
 <p>一个名叫<ahref="https://zh.wikipedia.org/wiki/%E4%BA%9A%E5%8E%86%E5%B1%B1%E5%A4%A7%C2%B7%E5%A5%A5%E5%B0%94%E6%B4%9B%E5%A4%AB">亚历山大·奥尔洛夫</a>的苏联<ahref="https://zh.wikipedia.org/wiki/%E7%A7%98%E5%AF%86%E8%AD%A6%E5%AF%9F">秘密警察</a>，自称曾参与<ahref="https://zh.wikipedia.org/wiki/%E5%A4%A7%E6%B8%85%E6%B4%97">大清洗</a>的行动，后来流亡<ahref="https://zh.wikipedia.org/wiki/%E7%BE%8E%E5%9B%BD">美国</a>，写下了《<ahref="https://zh.wikipedia.org/w/index.php?title=%E6%96%AF%E5%A4%A7%E6%9E%97%E8%82%83%E5%8F%8D%E7%A7%98%E5%8F%B2&amp;action=edit&amp;redlink=1">斯大林肃反秘史</a>》（<em>The Secret History of Stalin&#8217;s Crimes</em>）一书。该书披露了大清洗的许多内幕，其中也包括莫斯科公审中如何迫使被告人在法庭上自行认罪的内幕。</p>
 <h2><strong>匈牙利“劳伊克”与“约瑟夫主教”作秀公审</strong></h2>
-<p><strong>?</strong>二战后期，苏联进入并占领了匈牙利，扶植亲苏人士建立了共产党政权，曾任匈共国外中央委员会领导人的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%8B%89%E7%A7%91%E8%A5%BF.md#1">拉科西</a>·马加什当选为匈共中央委员会总书记，并先后任政府副总理、总理、部长会议主席等。1948年，在清除了其他政党和社会民主党中的右翼势力后，匈共与社民党合并为匈牙利劳动人民党，原社民党总书记阿尔帕德任党主席，拉科西为总书记，匈共的法尔卡什·米哈伊、卡达尔·亚诺什以及社民党的马罗山·捷尔吉为副总书记。匈牙利确立了一党专制，其他政党全部消失。</p>
+<p><strong>?</strong>二战后期，苏联进入并占领了匈牙利，扶植亲苏人士建立了共产党政权，曾任匈共国外中央委员会领导人的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8B%89%E7%A7%91%E8%A5%BF.md#1">拉科西</a>·马加什当选为匈共中央委员会总书记，并先后任政府副总理、总理、部长会议主席等。1948年，在清除了其他政党和社会民主党中的右翼势力后，匈共与社民党合并为匈牙利劳动人民党，原社民党总书记阿尔帕德任党主席，拉科西为总书记，匈共的法尔卡什·米哈伊、卡达尔·亚诺什以及社民党的马罗山·捷尔吉为副总书记。匈牙利确立了一党专制，其他政党全部消失。</p>
 <p>因为拉科西等高层唯苏联马首是瞻，因此不论是政治和经济等方面都效仿苏联，完全不考虑匈牙利的实际情况。其“作秀公审”自然也在效仿苏联。</p>
 <p>根据美联社的匈牙利裔记者马顿的报道，1949年，匈牙利对其匈共领导人之一、匈牙利外交部部长劳伊克·拉斯洛进行了公审，原因是他在国内政策问题上与苏联持有不同意见，因为被视为“铁托分子”，并成为首要清洗的对象。</p>
 <p>劳伊克被指控的罪名包括“美国中央情报局在匈牙利的代理人”、“南斯拉夫间谍和特务”、“托派”，“阴谋策划暗杀共产党领袖”、“阴谋武装暴动”等。最初，饱受折磨的劳伊克始终拒绝认罪，其后，在匈共领导人对其做出的保证其和妻子、刚出生的孩子将获人身安全的承诺，同意“认罪”。当时劝说其的说辞是“斯大林和党组织知道他们是无辜的，但是为了揭穿铁托的阴谋，需要他们做出牺牲”，审判结束后，他们会被送到安全的地方，过隐姓埋名的生活。</p>
@@ -35,62 +34,59 @@
 <p>“劳伊克公审”是二战后东欧第一次作秀公审，为其他东欧国家提供了范例。同年，匈牙利还对支持教会自由和反对当局的罗马天主教会在匈牙利的首席主教约瑟夫·敏真谛枢机进行了作秀公审，主教被判终身监禁。</p>
 <h2><strong>中国作秀公审之“四人帮”</strong></h2>
 <p>文革原本是独揽大权的毛泽东为消除党内异己刘少奇等人而自下而上发起的一场浩劫，但在毛死后，中共为了掩盖历史真相，却将林彪与江青、张春桥、王洪文、姚文元组成的“四人帮”抓捕，共同指责为文革的罪魁祸首，让他们成为了“毛泽东的替罪羊”。</p>
-<p>1981年，中共最高法院成立的特别法庭对“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%9B%9B%E4%BA%BA%E5%B8%AE.md#1">四人帮</a>”进行了所谓的公开审判，并认定他们均为“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9E%97%E5%BD%AA.md#1">林彪</a><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B1%9F%E9%9D%92.md#1">江青</a>反革命集团”的成员，并判处了相应的刑罚。江青、张春桥被判死缓，后改为无期徒刑。王洪文被判无期，姚文元被判有期徒刑20年。1991年5月14日江青自杀身亡，终年77岁。</p>
+<p>1981年，中共最高法院成立的特别法庭对“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%9B%9B%E4%BA%BA%E5%B8%AE.md#1">四人帮</a>”进行了所谓的公开审判，并认定他们均为“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9E%97%E5%BD%AA.md#1">林彪</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%9F%E9%9D%92.md#1">江青</a>反革命集团”的成员，并判处了相应的刑罚。江青、张春桥被判死缓，后改为无期徒刑。王洪文被判无期，姚文元被判有期徒刑20年。1991年5月14日江青自杀身亡，终年77岁。</p>
 <p>对于中共的作秀审判和最高法的判决，江青拒不服从。江青曾针对公诉人的起诉书，在法庭上进行了自我辩护，并指其是“颠倒是非，混淆黑白，歪曲、篡改历史，隐瞒捏造事实”。江青的不服确有道理。文革是毛发动的，江青所做的一切也都是秉承毛的指示。正如江青在庭审中所说的那样，她不过是毛的一条狗，毛“叫咬谁就咬谁”。她迫害刘少奇夫妇如果没有毛的允许，是根本不可能实现的。</p>
 <p>针对起诉书中将罪责指向“四人帮”，江青还反问邓小平等高官：“党中央授予我一定的领导权后，我始终就在这个权力的范围内进行我的工作，这怎么能说我是非法的呢？这样说，你们把以毛××为首的党中央究竟置于何地？你们究竟还承认不承认九大和十大通过的政治报告和党中央的一系列的重要文件和毛泽东、周恩来的讲话和批示？”</p>
 <p>“我所干的这一切，邓小平、华国锋，包括你们现在在台上的绝大多数人都曾经异口同声地拥护过，参加过，你们又怎样解释你们当年的行为呢？……”</p>
 <p>江青的质问，邓小平等是无法回答的，而让毛承担文革罪责，中共当局也是不敢的。因为如果将罪责推到毛身上，中共能否保住显然是个大问题。是以为了延续中共的寿命，中共有意推卸毛的罪责，并对反思文革加以控制，其目的就是掩盖中共的邪恶本质，使其继续为害中国。</p>
 <p>也因此，公审“四人帮”就是彻头彻尾的作秀，目的是平息中共党内乃至全国人民的不满情绪。</p>
-<h2><strong>中共作秀公审之<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%9D%A5.md#1">薄熙来</a>案</strong><strong><br />
+<h2><strong>中共作秀公审之<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%9D%A5.md#1">薄熙来</a>案</strong><strong><br />
 </strong></h2>
-<p>2012年习近平上台以来，掀起了反腐运动。2012年3月，密谋发动政变的重庆原市委书记<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%9D%A5.md#1">薄熙来</a>，因为手下的副市长王立军投美而牵出内幕，被迅即拿下。2013年8月，当局以受贿罪、贪污罪、滥用职权罪判处薄熙来无期徒刑。而在审判之前，当局业已与其达成了协议，所谓的公审不过是当局的又一次作秀。</p>
+<p>2012年习近平上台以来，掀起了反腐运动。2012年3月，密谋发动政变的重庆原市委书记<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%9D%A5.md#1">薄熙来</a>，因为手下的副市长王立军投美而牵出内幕，被迅即拿下。2013年8月，当局以受贿罪、贪污罪、滥用职权罪判处薄熙来无期徒刑。而在审判之前，当局业已与其达成了协议，所谓的公审不过是当局的又一次作秀。</p>
 <p>因为薄熙来所做的恶事不仅仅是贪污受贿那样简单。除了中共不敢向外界透露其与周永康等阴谋政变的真相，不敢以“颠覆国家政权罪、煽动颠覆国家政权罪”等起诉他外，中共还不敢以“侵犯公民人身权利、民主权利罪”来起诉他，因为背后隐藏的乃是其夫妇二人迫害和活摘法轮功学员器官的骇人听闻的罪行。回避上述罪行的所谓公审，同样是作秀。</p>
 <h2><strong>结语</strong></h2>
 <p>随着苏东共产国家的垮台，共产党国家的“作秀公审”更多地存在于中共治下的中国。近年来很多对落马官员的公开审判不少都是作秀，其所披露的罪行也都是中共当局事先斟酌好的。其目的除了警告官员外，也是意在收买人心。只是随着越来越多的中国人意识到这其中的猫腻后，中共的欺骗伎俩所起的作用也越来越弱。无疑，“作秀公审”也将随着中共走入历史的垃圾堆。</p>
 <p>责任编辑：莆山</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/13/10/1/n3976496.md#1">佚名：中共的庭审秀</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/13/8/17/n3942859.md#1">三改罪名编证据 保定法院上演“庭审秀”</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/12/8/21/n3664714.md#1">新华社报导删谷开来赞法庭之词</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/12/8/20/n3663898.md#1">德媒：政治审判 政治判决 政治司法</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/12/8/6/n3652963.md#1">海伍德被灭口 薄谷开来案涉活摘器官及贩卖尸体</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/8/11/12/n2327243.md#1">李大立 ：“一举粉碎四人帮”有什么好夸耀的？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/6/10/10/n1482146.md#1">梁京：“粉碎四人帮”的历史遗产</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/6/10/10/n1482146.md#1">梁京：“粉碎四人帮”的历史遗产</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/11/12/n2327243.md#1">李大立 ：“一举粉碎四人帮”有什么好夸耀的？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/8/6/n3652963.md#1">海伍德被灭口 薄谷开来案涉活摘器官及贩卖尸体</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/8/20/n3663898.md#1">德媒：政治审判 政治判决 政治司法</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/12/8/22/n3665271.md#1">宋永毅评薄谷死缓案 犹比公审江青还倒退</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/12/8/22/n3664785.md#1">华尔街日报：精心打造的薄谷开来审判模糊焦点</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/8/n10625340.md#1" target="_blank">玉清心：文革“破四旧”不堪回首 但不能遗忘</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/6/n10461502.md#1" target="_blank">四位中国军医的人生奇遇</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/23/n11473593.md#1" target="_blank">林辉：六七香港红潮 新华社分社发动菠萝战</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/23/n10871477.md#1" target="_blank">感恩节 来自西方人的最美好心愿</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942656.md#1">集中营？传武汉再建可容4千人新方舱医院</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940920.md#1">荷兰科学家首发现武汉病毒抗体 药物快过疫苗</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940024.md#1">“郑州毒王”隐瞒旅游史 恐影响全球近4万人</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11939304.md#1">武汉失踪青年达数百人 警方不作为（上）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940229.md#1">【直播回放】3.14新肺炎追踪：美进入紧急状态</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941108.md#1">【现场视频】黄冈蕲春刚刚解封 多处又封了</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11944429.md#1">【直播回放】3.16新肺炎追踪：中共瞒疫情在美挨告</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938952.md#1">疫情下范冰冰晒自拍 出门戴双层口罩引围观</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938685.md#1">梁朝伟赴澳洲拍漫威片《上气》剧组全面停工</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/11/28/n10879954.htm">林辉：共产党国家的“作秀公审”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/11/28/n10879954.htm">林辉：共产党国家的“作秀公审”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/18/11/28/n10879954.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/11/28/n10879954.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
